
* bidi is a helper function to implement icons that are different between LTR and RTL text. 

* buffer-reset-export advises LyX to remove the auxiliary files before doing the next
  export.

* buffer-write-as-template is a new convenience function to ease saving a document
  in the (personal) templates folder.

* export-cancel: Used to cancel background export processes.

* master-buffer-forall executes an lfun in the master and all children of a document.

* paragraph-select is a new convenience function to select the paragraph
  surrounding the actual cursor position.

* tabular-style-insert: Insert a table in a specified style.


!!!The following LyX functions have been changed in 2.4:

* set-graphics-group was renamed to graphics-set-group.

* info-insert buffer vcs-*: renamed to info-insert vcs *

* file-insert: optional second parameter "ignorelang" to make the insertion
  ignore the inserted file's main language (and rather adapt it to the insertion
  context's language).


!!!The following LyX functions have been removed in 2.4:

* date-insert: obsoleted by info-insert date.



!!!The following LyX documents have been moved in 2.4:

* As a result of a major restructuring of the templates and example
  directories, almost all examples and templates files have been renamed and
  moved to subfolders that reflect the layout category.
  The files now have much more decriptive (and longer) names, and they use
  URL encoding for specific special characters such as '(', ')' and '&'.
  Notably also the file that opens for new users has been renamed (from
  splash.lyx to Welcome.lyx).


!!!The following new folders have been added to the LyX directory

* The examples and templates directories have been completely re-organized.
  They are now much more structured (by means of layout categories) and thus
  consist of many new subfolders. 



!!!The following preferences files have been removed from the tarball in 2.4:


