@@ -489,6 +489,7 @@ enum FuncCode
 	// 380
 	LFUN_BUFFER_RESET_EXPORT,       // spitz 20191226
 	LFUN_MASTER_BUFFER_FORALL,      // spitz 20191231
+	LFUN_IF_RELATIVES,              // spitz 20200102
 	LFUN_LASTACTION                 // end of the table
 };
 
